syntax = "proto3";

package pb;

import "refresh_token/refresh_token.proto";

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/refresh_token";

message ListRevokedRefreshTokensRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message ListRevokedRefreshTokensResponse {
    repeated RefreshToken refresh_tokens = 1;
}